# Escape from autotools headaches like this ...

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

FIND_PROGRAM(PHP_CONFIG NAMES php-config DOC "path to php-config")

if (!PHP_CONFIG)
    MESSAGE (FATAL_ERROR "php-config cannot be found") 
endif()

EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --configure-options   OUTPUT_VARIABLE PHP_CONFIGURE     OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --prefix              OUTPUT_VARIABLE PHP_PREFIX        OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --include-dir         OUTPUT_VARIABLE PHP_INCLUDE_DIR   OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --extension-dir       OUTPUT_VARIABLE PHP_EXTENSION_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --includes            OUTPUT_VARIABLE PHP_INCLUDES      OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --libs                OUTPUT_VARIABLE PHP_LIBS          OUTPUT_STRIP_TRAILING_WHITESPACE)
EXECUTE_PROCESS (COMMAND ${PHP_CONFIG} --vernum              OUTPUT_VARIABLE PHP_VERSION       OUTPUT_STRIP_TRAILING_WHITESPACE)

INCLUDE_DIRECTORIES(${PHP_INCLUDE_DIR}
                    ${PHP_INCLUDE_DIR}/Zend
                    ${PHP_INCLUDE_DIR}/TSRM
                    ${PHP_INCLUDE_DIR}/main
                    ${PHP_INCLUDE_DIR}/ext
                    ${PHP_INCLUDE_DIR}/ext/standard)
                    
if (${PHP_CONFIGURE} MATCHES "enable-debug")
    SET(CMAKE_BUILD_TYPE Debug CACHE STRING "PHP Build Type")
else()
    SET(CMAKE_BUILD_TYPE Release CACHE STRING "PHP Build Type")
endif()

# begin ext author bits
PROJECT (sandbox)

# project specifics
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(src)

ADD_LIBRARY(sandbox SHARED sandbox.c src/monitor.c src/copy.c src/sandbox.c)

# install section
INSTALL (TARGETS sandbox LIBRARY DESTINATION ${PHP_EXTENSION_DIR})

# php extension specifics
SET_TARGET_PROPERTIES(sandbox PROPERTIES 
    PREFIX ""
    COMPILE_FLAGS "-DZEND_ENABLE_STATIC_TSRMLS_CACHE=1 -DCOMPILE_DL_SANDBOX"
    #LINK_FLAGS "here"
)
